test: add controller unit tests to improve SonarCloud coverage